fix(font-size): fix smaller font size on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,7 +78,6 @@
 
 .feature-p{
 	margin-bottom: 32px;
-	font-size: 15px;
 }
 
 .italic{
@@ -702,9 +701,6 @@ div{
 	}
 	body{
 		overflow-x: hidden;
-	}
-	.feature-h3{
-		font-size: 18px;
 	}
 	.open-menu{
 		color: #ffffff;
